rename fix-panel-spacing to reduce-panel-spacing

--- a/unite@hardpixel.eu/stylesheet.css
+++ b/unite@hardpixel.eu/stylesheet.css
@@ -1,21 +1,21 @@
-#panel.fix-spacing .panel-button {
+#panel.small-spacing .panel-button {
   -natural-hpadding: 8px;
   -minimum-hpadding: 6px;
 }
 
-#panel.fix-spacing .panel-button .system-status-icon {
+#panel.small-spacing .panel-button .system-status-icon {
   padding: 0;
 }
 
-#panel.fix-spacing .panel-button .panel-status-indicators-box {
+#panel.small-spacing .panel-button .panel-status-indicators-box {
   spacing: 12px;
 }
 
-#panel.fix-spacing.extra-spacing .panel-button .panel-status-indicators-box {
+#panel.small-spacing.extra-spacing .panel-button .panel-status-indicators-box {
   spacing: 10px;
 }
 
-#panel.fix-spacing.extra-spacing #appMenu {
+#panel.small-spacing.extra-spacing #appMenu {
   margin: 0 8px;
 }
 
@@ -24,7 +24,7 @@
 }
 
 #panel .window-controls,
-#panel.fix-spacing .window-controls {
+#panel.small-spacing .window-controls {
   -natural-hpadding: 0px;
   -minimum-hpadding: 0px;
 }
